feat: Implementou testes de vazamento de memória com MemLab, ajustou a ordem dos provedores de contexto em testes e corrigiu a codificação de texto na UI.

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -56,7 +56,7 @@
         },
         file: { onFileChanged: () => () => { } },
         i18n: {
-          getLanguage: () => Promise.resolve('en'),
+          getLanguage: () => Promise.resolve({ success: true, language: 'en' }),
         },
         log: {
           error: () => { },
